--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   provider: ^6.1.2
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
+  fl_chart: ^0.68.0
   api:
     path: ../api
     # git:
