--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   fl_chart: ^0.68.0
+  sqlite3_flutter_libs: ^0.5.21
   api:
     path: ../api
     # git:
