--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   equatable: ^2.0.5
   fl_chart: ^0.68.0
   sqlite3_flutter_libs: ^0.5.21
+  intl: ^0.19.0
   api:
     path: ../api
     # git:
