--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.1.2
-  flutter_bloc: ^8.1.5
+  cached_network_image: ^3.3.1
   equatable: ^2.0.5
   fl_chart: ^0.68.0
-  sqlite3_flutter_libs: ^0.5.21
+  flutter_bloc: ^8.1.5
+  flutter_widget_from_html: ^0.15.0
   intl: ^0.19.0
+  provider: ^6.1.2
+  sqlite3_flutter_libs: ^0.5.21
   api:
     path: ../api
     # git:
