--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_widget_from_html: ^0.15.0
   intl: ^0.19.0
   provider: ^6.1.2
+  share_plus: ^9.0.0
+  shared_preferences: ^2.2.3
   sqlite3_flutter_libs: ^0.5.21
   api:
     path: ../api
